Revise module project 2.1.1

--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -12,51 +12,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "7IXUfiQ2UKj6"
-   },
-   "source": [
-    "# Regression 1\n",
-    "\n",
-    "## Assignment\n",
-    "\n",
-    "You'll use another **New York City** real estate dataset. \n",
-    "\n",
-    "But now you'll **predict how much it costs to rent an apartment**, instead of how much it costs to buy a condo.\n",
-    "\n",
-    "The data comes from renthop.com, an apartment listing website.\n",
-    "\n",
-    "- [ ] Look at the data. Choose a feature, and plot its relationship with the target.\n",
-    "- [ ] Use scikit-learn for linear regression with one feature. You can follow the [5-step process from Jake VanderPlas](https://jakevdp.github.io/PythonDataScienceHandbook/05.02-introducing-scikit-learn.html#Basics-of-the-API).\n",
-    "- [ ] Define a function to make new predictions and explain the model coefficient.\n",
-    "- [ ] Organize and comment your code.\n",
-    "\n",
-    "> [Do Not Copy-Paste.](https://docs.google.com/document/d/1ubOw9B3Hfip27hF2ZFnW3a3z9xAgrUDRReOEo-FHCVs/edit) You must type each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons.\n",
-    "\n",
-    "If your **Plotly** visualizations aren't working:\n",
-    "- You must have JavaScript enabled in your browser\n",
-    "- You probably want to use Chrome or Firefox\n",
-    "- You may need to turn off ad blockers\n",
-    "- [If you're using Jupyter Lab locally, you need to install some \"extensions\"](https://plot.ly/python/getting-started/#jupyterlab-support-python-35)\n",
-    "\n",
-    "## Stretch Goals\n",
-    "- [ ] Do linear regression with two or more features.\n",
-    "- [ ] Read [The Discovery of Statistical Regression](https://priceonomics.com/the-discovery-of-statistical-regression/)\n",
-    "- [ ] Read [_An Introduction to Statistical Learning_](http://faculty.marshall.usc.edu/gareth-james/ISL/ISLR%20Seventh%20Printing.pdf), Chapter 2.1: What Is Statistical Learning?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "o9eSnDYhUGD7"
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture\n",
     "import sys\n",
     "\n",
     "# If you're on Colab:\n",
@@ -65,28 +26,117 @@
     "\n",
     "# If you're working locally:\n",
     "else:\n",
-    "    DATA_PATH = '../data/'\n",
+    "    DATA_PATH = '../data/'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Module Project: Regression I\n",
+    "\n",
+    "During the guided project, we predicted how much it would cost to buy a condo in Tribecca. For the module project, your goal will be similar: predict how much it costs to rent an apartment in New York City.\n",
+    "\n",
+    "Dataset source: [renthop.com](https://www.renthop.com/).\n",
+    "\n",
+    "## Directions\n",
+    "\n",
+    "> Do Not Copy-Paste. You must *type* each of these exercises in, manually. If you copy and paste, you might as well not even do them. The point of these exercises is to train your hands, your brain, and your mind in how to read, write, and see code. If you copy-paste, you are cheating yourself out of the effectiveness of the lessons.\n",
+    ">\n",
+    "> — Zed Shaw, [Learn Python the Hard Way](https://learnpythonthehardway.org/)\n",
+    "\n",
+    "The tasks for this project are as follows:\n",
+    "\n",
+    "- **Task 1:** Import `csv` file using wrangle function.\n",
+    "- **Task 2:** Conduct exploratory data analysis (EDA) and plot the relationship between one feature and the target `'price'`.\n",
+    "- **Task 3:** Split data into feature matrix `X` and target vector `y`.\n",
+    "- **Task 4:** Establish the baseline mean absolute error for your dataset.\n",
+    "- **Task 5:** Build and train a `Linearregression` model.\n",
+    "- **Task 6:** Check the mean absolute error of our model on the training data.\n",
+    "- **Task 7:** Extract and print the intercept and coefficient from your `LinearRegression` model.\n",
+    "\n",
+    "**Note**\n",
+    "\n",
+    "You should limit yourself to the following libraries for this project:\n",
+    "\n",
+    "- `matplotlib`\n",
+    "- `numpy`\n",
+    "- `pandas`\n",
+    "- `sklearn`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## I. Wrangle Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wrangle(filepath):\n",
+    "    df = pd.read_csv(filepath)\n",
     "    \n",
-    "# Ignore this Numpy warning when using Plotly Express:\n",
-    "# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
-    "import warnings\n",
-    "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
+    "    # Remove the most extreme 1% prices,\n",
+    "    # the most extreme .1% latitudes, &\n",
+    "    # the most extreme .1% longitudes\n",
+    "    df = df[(df['price'] >= np.percentile(df['price'], 0.5)) & \n",
+    "            (df['price'] <= np.percentile(df['price'], 99.5)) & \n",
+    "            (df['latitude'] >= np.percentile(df['latitude'], 0.05)) & \n",
+    "            (df['latitude'] < np.percentile(df['latitude'], 99.95)) &\n",
+    "            (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
+    "            (df['longitude'] <= np.percentile(df['longitude'], 99.95))]\n",
+    "    \n",
+    "    return df\n",
+    "\n",
+    "filepath = DATA_PATH + 'apartments/renthop-nyc.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 1:** Use the above `wrangle` function to import the `renthop-nyc.csv` file into a DataFrame named `df`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 2:** Use your `pandas` and dataviz skills to explore the dataset. As part of this process, make a scatter plot that shows the relationship between one of the numerical features in the dataset and the target `'price'`.\n",
+    "\n",
+    "**Remember:** You should plot your feature on the `X` axis and your target on the `y` axis."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "4S2wXSrFV_g4"
-   },
+   "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Read New York City apartment rental listing data\n",
-    "import pandas as pd\n",
-    "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
-    "assert df.shape == (49352, 34)"
+    "#  II. Split Data\n",
+    "\n",
+    "**Task 3:** Choose one feature from the dataset and assign it to your feature matrix `X`. Then assign the column `'price'` to the target vector `y`.\n",
+    "\n",
+    "**Remember:** Your feature matrix needs to be two-dimensional, but your feature matrix must be one-dimensional."
    ]
   },
   {
@@ -95,17 +145,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove outliers: \n",
-    "# the most extreme 1% prices,\n",
-    "# the most extreme .1% latitudes, &\n",
-    "# the most extreme .1% longitudes\n",
-    "df = df[(df['price'] >= 1375) & (df['price'] <= 15500) & \n",
-    "        (df['latitude'] >=40.57) & (df['latitude'] < 40.99) &\n",
-    "        (df['longitude'] >= -74.1) & (df['longitude'] <= -73.38)]"
+    "X = ...\n",
+    "y = ..."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# III. Establish Baseline\n",
+    "\n",
+    "**Task 4:** Since this is a **regression** problem, you need to calculate the baseline the mean absolute error for your model. First, calculate the mean of `y`. Next, create a list `y_pred` that has the same length as `y` and where every item in the list is the mean. Finally, use `mean_absolute_error` to calculate your baseline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseline_mae = ...\n",
+    "print('Baseline MAE:', baseline_mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IV. Build Model\n",
+    "\n",
+    "**Task 5:** Build and train a `LinearRegression` model named `model` using your feature matrix `X` and your target vector `y`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Import predictor class\n",
+    "\n",
+    "\n",
+    "# Step 2: Instantiate predictor\n",
+    "model = ...\n",
+    "\n",
+    "# Step 3: Fit predictor on the (training) data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# V. Check Metrics\n",
+    "\n",
+    "**Task 6:** How does your model perform in comparison to your baseline? Calculate the mean absolute error for your model's predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_mae = ...\n",
+    "\n",
+    "print('Training MAE:', training_mae)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VI. Communicate Results \n",
+    "\n",
+    "You've just created a linear model. That means that your model makes predictions using an equation that looks like $\\texttt{apt price} = \\texttt{intercept}~+~\\texttt{coefficient}~\\times~\\texttt{your feature}$. But what are the values of the intercept and coefficient that your model is using? \n",
+    "\n",
+    "**Task 7:** Print out the intercept and coefficient associated with `model`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "LS_DS_211_solution.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -121,7 +252,202 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "038fb72d2f144665b2897d970f9920c5": {
+     "model_module": "@jupyter-widgets/base",
+     "model_name": "LayoutModel",
+     "state": {
+      "_model_module": "@jupyter-widgets/base",
+      "_model_module_version": "1.2.0",
+      "_model_name": "LayoutModel",
+      "_view_count": null,
+      "_view_module": "@jupyter-widgets/base",
+      "_view_module_version": "1.2.0",
+      "_view_name": "LayoutView",
+      "align_content": null,
+      "align_items": null,
+      "align_self": null,
+      "border": null,
+      "bottom": null,
+      "display": null,
+      "flex": null,
+      "flex_flow": null,
+      "grid_area": null,
+      "grid_auto_columns": null,
+      "grid_auto_flow": null,
+      "grid_auto_rows": null,
+      "grid_column": null,
+      "grid_gap": null,
+      "grid_row": null,
+      "grid_template_areas": null,
+      "grid_template_columns": null,
+      "grid_template_rows": null,
+      "height": null,
+      "justify_content": null,
+      "justify_items": null,
+      "left": null,
+      "margin": null,
+      "max_height": null,
+      "max_width": null,
+      "min_height": null,
+      "min_width": null,
+      "object_fit": null,
+      "object_position": null,
+      "order": null,
+      "overflow": null,
+      "overflow_x": null,
+      "overflow_y": null,
+      "padding": null,
+      "right": null,
+      "top": null,
+      "visibility": null,
+      "width": null
+     }
+    },
+    "10fef5d3d77b4a2bb244ac678e2f9e99": {
+     "model_module": "@jupyter-widgets/output",
+     "model_name": "OutputModel",
+     "state": {
+      "_dom_classes": [],
+      "_model_module": "@jupyter-widgets/output",
+      "_model_module_version": "1.0.0",
+      "_model_name": "OutputModel",
+      "_view_count": null,
+      "_view_module": "@jupyter-widgets/output",
+      "_view_module_version": "1.0.0",
+      "_view_name": "OutputView",
+      "layout": "IPY_MODEL_ce2f8a57f7c648e4a189cde1669503cb",
+      "msg_id": "",
+      "outputs": [
+       {
+        "metadata": {
+         "tags": []
+        },
+        "output_type": "display_data",
+        "text/plain": "'Rent for a 2-bedroom apartment in New York City is estimated at $3,974. Each additional bedroom is associated with a $853 increase in this model.'"
+       }
+      ]
+     }
+    },
+    "2996358879be4a7d9e9df7790eb90867": {
+     "model_module": "@jupyter-widgets/controls",
+     "model_name": "VBoxModel",
+     "state": {
+      "_dom_classes": [
+       "widget-interact"
+      ],
+      "_model_module": "@jupyter-widgets/controls",
+      "_model_module_version": "1.5.0",
+      "_model_name": "VBoxModel",
+      "_view_count": null,
+      "_view_module": "@jupyter-widgets/controls",
+      "_view_module_version": "1.5.0",
+      "_view_name": "VBoxView",
+      "box_style": "",
+      "children": [
+       "IPY_MODEL_9943be415c544ba8be4615000316dd67",
+       "IPY_MODEL_10fef5d3d77b4a2bb244ac678e2f9e99"
+      ],
+      "layout": "IPY_MODEL_038fb72d2f144665b2897d970f9920c5"
+     }
+    },
+    "472a8f7627d5432580cd3d53480a320d": {
+     "model_module": "@jupyter-widgets/base",
+     "model_name": "LayoutModel",
+     "state": {
+      "_model_module": "@jupyter-widgets/base",
+      "_model_module_version": "1.2.0",
+      "_model_name": "LayoutModel",
+      "_view_count": null,
+      "_view_module": "@jupyter-widgets/base",
+      "_view_module_version": "1.2.0",
+      "_view_name": "LayoutView",
+      "align_content": null,
+      "align_items": null,
+      "align_self": null,
+      "border": null,
+      "bottom": null,
+      "display": null,
+      "flex": null,
+      "flex_flow": null,
+      "grid_area": null,
+      "grid_auto_columns": null,
+      "grid_auto_flow": null,
+      "grid_auto_rows": null,
+      "grid_column": null,
+      "grid_gap": null,
+      "grid_row": null,
+      "grid_template_areas": null,
+      "grid_template_columns": null,
+      "grid_template_rows": null,
+      "height": null,
+      "justify_content": null,
+      "justify_items": null,
+      "left": null,
+      "margin": null,
+      "max_height": null,
+      "max_width": null,
+      "min_height": null,
+      "min_width": null,
+      "object_fit": null,
+      "object_position": null,
+      "order": null,
+      "overflow": null,
+      "overflow_x": null,
+      "overflow_y": null,
+      "padding": null,
+      "right": null,
+      "top": null,
+      "visibility": null,
+      "width": null
+     }
+    },
+    "9943be415c544ba8be4615000316dd67": {
+     "model_module": "@jupyter-widgets/controls",
+     "model_name": "IntSliderModel",
+     "state": {
+      "_dom_classes": [],
+      "_model_module": "@jupyter-widgets/controls",
+      "_model_module_version": "1.5.0",
+      "_model_name": "IntSliderModel",
+      "_view_count": null,
+      "_view_module": "@jupyter-widgets/controls",
+      "_view_module_version": "1.5.0",
+      "_view_name": "IntSliderView",
+      "continuous_update": true,
+      "description": "bedrooms",
+      "description_tooltip": null,
+      "disabled": false,
+      "layout": "IPY_MODEL_472a8f7627d5432580cd3d53480a320d",
+      "max": 4,
+      "min": 1,
+      "orientation": "horizontal",
+      "readout": true,
+      "readout_format": "d",
+      "step": 1,
+      "style": "IPY_MODEL_f496517c23114e2d9920990aa81265b9",
+      "value": 2
+     }
+    },
+    "f496517c23114e2d9920990aa81265b9": {
+     "model_module": "@jupyter-widgets/controls",
+     "model_name": "SliderStyleModel",
+     "state": {
+      "_model_module": "@jupyter-widgets/controls",
+      "_model_module_version": "1.5.0",
+      "_model_name": "SliderStyleModel",
+      "_view_count": null,
+      "_view_module": "@jupyter-widgets/base",
+      "_view_module_version": "1.2.0",
+      "_view_name": "StyleView",
+      "description_width": "",
+      "handle_color": null
+     }
+    }
+   }
   }
  },
  "nbformat": 4,
