--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "## Directions\n",
     "\n",
-    "The task for this project are the following:\n",
+    "The tasks for this project are the following:\n",
     "\n",
     "- **Task 1:** Import `csv` file using `wrangle` function.\n",
     "- **Task 2:** Conduct exploratory data analysis (EDA), and modify `wrangle` function to engineer two subset your dataset to one-family dwellings whose price is between \\\\$100,000 and \\\\$2,000,000.\n",
@@ -112,7 +112,7 @@
    "source": [
     "**Task 2:** Modify the above `wrangle` function so that:\n",
     "\n",
-    "- The column `'SALE DATE'` is parsed as datetime and is set as the index.\n",
+    "- The column `'SALE DATE'` becomes the `DatetimeIndex`.\n",
     "- The dtype for the `'BOROUGH'` column is `object`, not `int`.\n",
     "- The dtype for the `'SALE PRICE'` column is `int`, not `object`.\n",
     "- The dataset includes only one-family dwellings (`BUILDING CLASS CATEGORY == '01 ONE FAMILY DWELLINGS'`).\n",
@@ -174,7 +174,7 @@
    "source": [
     "# III. Establish Baseline\n",
     "\n",
-    "**Task 5:** Since this is a **regression** problem, you need to calculate the baseline the mean absolute error for your model."
+    "**Task 5:** Since this is a **regression** problem, you need to calculate the baseline mean absolute error for your model."
    ]
   },
   {
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task 7:** Build and train a `LinearRegression` model named `model_lr`. Remember to train your model using your _tranformed_ feature matrix."
+    "**Task 7:** Build and train a `LinearRegression` model named `model_lr`. Remember to train your model using your _transformed_ feature matrix."
    ]
   },
   {
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task 8:** Build and train a `Ridge` model named `model_r`. Remember to train your model using your _tranformed_ feature matrix."
+    "**Task 8:** Build and train a `Ridge` model named `model_r`. Remember to train your model using your _transformed_ feature matrix."
    ]
   },
   {
