--- a/module2-regression-2/LS_DS_212_assignment.work.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.work.ipynb
@@ -67,7 +67,7 @@
         "else:\n",
         "    DATA_PATH = '../data/'"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -131,12 +131,21 @@
         "            (df['latitude'] < np.percentile(df['latitude'], 99.95)) &\n",
         "            (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
         "            (df['longitude'] <= np.percentile(df['longitude'], 99.95))]\n",
-        "    \n",
-        "    return df\n",
+        "    # Task 2: Conduct exploratory data analysis (EDA), and modify wrangle function to engineer two new features.\n",
+        "    # BLOCKER: cant use dot method to create this feature\n",
+        "    df['petBias'] = (df['cats_allowed'] != df['dogs_allowed']).astype(int)\n",
+        "    # This is supposed to say if neither true then 1\n",
+        "    df['inaccessible'] = abs((df['wheelchair_access']  + df['elevator'])-1).astype(int)\n",
+        "    # Task 1b.1: The 'created' column will parsed as a DateTime object and set as the index of the DataFrame.\n",
+        "    #df.set_index(['created'], inplace=True)        \n",
+        "    # Task 1b.2 \n",
+        "    #df.dropna(inplace=True)\n",
+        "\n",
+        "    return df \n",
         "\n",
         "filepath = DATA_PATH + 'apartments/renthop-nyc.csv'"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -156,13 +165,302 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XtL8hElWPd1L"
+        "id": "XtL8hElWPd1L",
+        "outputId": "cbdf212a-ce11-4a31-a313-549ad722b687",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 513
+        }
       },
       "source": [
-        "df = ..."
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# Task 1: Import csv file using wrangle function.\n",
+        "# BLOCKER: generic \"name\" error without imports first\n",
+        "df = wrangle(filepath)\n",
+        "\n",
+        "df.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>bathrooms</th>\n",
+              "      <th>bedrooms</th>\n",
+              "      <th>created</th>\n",
+              "      <th>description</th>\n",
+              "      <th>display_address</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>price</th>\n",
+              "      <th>street_address</th>\n",
+              "      <th>interest_level</th>\n",
+              "      <th>elevator</th>\n",
+              "      <th>cats_allowed</th>\n",
+              "      <th>hardwood_floors</th>\n",
+              "      <th>dogs_allowed</th>\n",
+              "      <th>doorman</th>\n",
+              "      <th>dishwasher</th>\n",
+              "      <th>no_fee</th>\n",
+              "      <th>laundry_in_building</th>\n",
+              "      <th>fitness_center</th>\n",
+              "      <th>pre-war</th>\n",
+              "      <th>laundry_in_unit</th>\n",
+              "      <th>roof_deck</th>\n",
+              "      <th>outdoor_space</th>\n",
+              "      <th>dining_room</th>\n",
+              "      <th>high_speed_internet</th>\n",
+              "      <th>balcony</th>\n",
+              "      <th>swimming_pool</th>\n",
+              "      <th>new_construction</th>\n",
+              "      <th>terrace</th>\n",
+              "      <th>exclusive</th>\n",
+              "      <th>loft</th>\n",
+              "      <th>garden_patio</th>\n",
+              "      <th>wheelchair_access</th>\n",
+              "      <th>common_outdoor_space</th>\n",
+              "      <th>petBias</th>\n",
+              "      <th>inaccessible</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1.5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2016-06-24 07:54:24</td>\n",
+              "      <td>A Brand New 3 Bedroom 1.5 bath ApartmentEnjoy ...</td>\n",
+              "      <td>Metropolitan Avenue</td>\n",
+              "      <td>40.7145</td>\n",
+              "      <td>-73.9425</td>\n",
+              "      <td>3000</td>\n",
+              "      <td>792 Metropolitan Avenue</td>\n",
+              "      <td>medium</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2016-06-12 12:19:27</td>\n",
+              "      <td></td>\n",
+              "      <td>Columbus Avenue</td>\n",
+              "      <td>40.7947</td>\n",
+              "      <td>-73.9667</td>\n",
+              "      <td>5465</td>\n",
+              "      <td>808 Columbus Avenue</td>\n",
+              "      <td>low</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2016-04-17 03:26:41</td>\n",
+              "      <td>Top Top West Village location, beautiful Pre-w...</td>\n",
+              "      <td>W 13 Street</td>\n",
+              "      <td>40.7388</td>\n",
+              "      <td>-74.0018</td>\n",
+              "      <td>2850</td>\n",
+              "      <td>241 W 13 Street</td>\n",
+              "      <td>high</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2016-04-18 02:22:02</td>\n",
+              "      <td>Building Amenities - Garage - Garden - fitness...</td>\n",
+              "      <td>East 49th Street</td>\n",
+              "      <td>40.7539</td>\n",
+              "      <td>-73.9677</td>\n",
+              "      <td>3275</td>\n",
+              "      <td>333 East 49th Street</td>\n",
+              "      <td>low</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2016-04-28 01:32:41</td>\n",
+              "      <td>Beautifully renovated 3 bedroom flex 4 bedroom...</td>\n",
+              "      <td>West 143rd Street</td>\n",
+              "      <td>40.8241</td>\n",
+              "      <td>-73.9493</td>\n",
+              "      <td>3350</td>\n",
+              "      <td>500 West 143rd Street</td>\n",
+              "      <td>low</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   bathrooms  bedrooms  ... petBias inaccessible\n",
+              "0        1.5         3  ...       0            1\n",
+              "1        1.0         2  ...       0            0\n",
+              "2        1.0         1  ...       0            1\n",
+              "3        1.0         1  ...       0            1\n",
+              "4        1.0         4  ...       0            1\n",
+              "\n",
+              "[5 rows x 36 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
     },
     {
       "cell_type": "markdown",
