--- a/module4-logistic-regression/214_guided_project_notes.ipynb
+++ b/module4-logistic-regression/214_guided_project_notes.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "214-guided-project-notes.ipynb",
+      "name": "214_guided-project-notes.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -14,53 +14,45 @@
   },
   "cells": [
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "k0dvbuCzd5qK"
+        "id": "ff_NZhdHCvfc"
       },
       "source": [
-        "# Model Building\n",
-        "from sklearn.feature_selection import SelectKBest, f_regression\n",
-        "from sklearn.linear_model import LinearRegression, Ridge\n",
-        "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
-        "from sklearn.pipeline import make_pipeline\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd\n",
+        "Lambda School Data Science\n",
         "\n",
-        "# For running this notebook either locally or in colab\n",
-        "import sys"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "*Unit 2, Sprint 1, Module 4*\n",
+        "\n",
+        "---"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wz7tyC22gLEA"
+        "id": "IorwKysWC9zl"
       },
       "source": [
         "%%capture\n",
+        "import sys\n",
+        "\n",
         "# If you're on Colab:\n",
         "if 'google.colab' in sys.modules:\n",
-        "    DATA_PATH = 'https://raw.githubusercontent.com/LambdaSchool/DS-Unit-2-Applied-Modeling/master/data/'\n",
+        "    DATA_PATH = 'https://raw.githubusercontent.com/LambdaSchool/DS-Unit-2-Linear-Models/master/data/'\n",
         "    !pip install category_encoders==2.*\n",
         "\n",
         "# If you're working locally:\n",
         "else:\n",
-        "    DATA_PATH = '../data/'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eK1JmTLj8wFC"
-      },
-      "source": [
-        "# For encoding categorical data\n",
-        "from category_encoders import OneHotEncoder"
+        "    DATA_PATH = '../data/'\n",
+        "\n",
+        "# Libraries for today's project\n",
+        "from category_encoders import OneHotEncoder\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd"
       ],
       "execution_count": null,
       "outputs": []
@@ -68,176 +60,56 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "c9XvBGFMguJ1"
+        "id": "u0tT4qPmCzUF"
       },
       "source": [
-        "# NYC Rent\n",
+        "# Part 1: Sprint Challenge Practice\n",
         "\n",
-        "**GOAL:** Improve our model for predicting NYC rent prices.\n",
-        "\n",
-        "**Objectives**\n",
-        "\n",
-        "- Do one-hot encoding of categorical features\n",
-        "- Do univariate feature selection\n",
-        "- Use scikit-learn to fit Ridge Regression models"
+        "- Can I import a CSV file into a DataFrame?\n",
+        "- Can I create a scatter plot?\n",
+        "- Can I split a DataFrame into a target vector and feature matrix?\n",
+        "- Can I split a dataset into a training set and a test set?\n",
+        "- Can I establish the baseline mean absolute error for a regression problem?\n",
+        "- Can I combine transformers with a predictor using a pipeline?\n",
+        "- Can I build a linear regresion model and a ridge regression model?\n",
+        "- Can I evaluate a model using common metrics like mean absolute error, root mean squared error, and R^2?\n",
+        "- If given a feature matrix, can I use my model to create a list of predictions?\n",
+        "- Can I create a horizontal bar chart with the coefficients from a linear model?"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0kaV7oNahJLj"
+        "id": "x-sAbpUqC3dt"
+      },
+      "source": [
+        "# Part 2: Pipelines and Plotting\n",
+        "\n",
+        "Let's revise [our work from yesterday](https://tinyurl.com/yb9cz6n5)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XD8xTT0yC-bq"
+      },
+      "source": [
+        "# Part 3: Logistic Regression"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2Cz8n4xnWmok"
       },
       "source": [
         "# I. Wrangle Data"
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iOecYDRyx5m-"
-      },
-      "source": [
-        "Create **wrangle function** for **reproducibility**."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "m9Dm3h3Ux5AI"
-      },
-      "source": [
-        "def wrangle(filepath):\n",
-        "  df = pd.read_csv(filepath,\n",
-        "                   parse_dates=['created'],\n",
-        "                   index_col='created').sort_index()\n",
-        "  \n",
-        "  # Remove outlier observations\n",
-        "  df = df[(df['price'] >= np.percentile(df['price'], 0.5)) & \n",
-        "          (df['price'] <= np.percentile(df['price'], 99.5)) & \n",
-        "          (df['latitude'] >= np.percentile(df['latitude'], 0.05)) & \n",
-        "          (df['latitude'] < np.percentile(df['latitude'], 99.95)) &\n",
-        "          (df['longitude'] >= np.percentile(df['longitude'], 0.05)) & \n",
-        "          (df['longitude'] <= np.percentile(df['longitude'], 99.95))]\n",
-        "\n",
-        "  # Drop high-cardinality categorical variables\n",
-        "  cutoff = 5\n",
-        "  drop_cols = [col for col in df.select_dtypes('object').columns\n",
-        "              if df[col].nunique() > cutoff]\n",
-        "  df.drop(columns=drop_cols, inplace=True)\n",
-        "\n",
-        "  return df\n",
-        "\n",
-        "df = wrangle(DATA_PATH+'apartments/renthop-nyc.csv')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Fr-x5LJo0pRc"
-      },
-      "source": [
-        "# II. Split Data\n",
-        "\n",
-        "Split **target vector** from **feature matrix**."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "r2TXo5xLo662"
-      },
-      "source": [
-        "target = 'price'\n",
-        "y = df[target]\n",
-        "X = df.drop(columns=target)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZMoRDMuT7A7q"
-      },
-      "source": [
-        "Split data into **training** and **test** sets.\n",
-        "\n",
-        "(Use data from April & May 2016 to train. Use data from June 2016 to test.)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7w92aZ7co9CA"
-      },
-      "source": [
-        "cutoff = '2016-06-01'\n",
-        "mask = X.index < cutoff\n",
-        "\n",
-        "X_train, y_train = X.loc[mask], y.loc[mask]\n",
-        "X_test, y_test = X.loc[~mask], y.loc[~mask]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-x9lFKmupRWk"
-      },
-      "source": [
-        "# III. Establish Baseline"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "d1BOKNBc7Jnf"
-      },
-      "source": [
-        "**Note:** This is a **regression** problem because we're predictiong the continuous value `'price'`."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-XNZHgf-7XQc"
-      },
-      "source": [
-        "y_pred = [y_train.mean()] * len(y_train)\n",
-        "print('Mean price:', y_train.mean())\n",
-        "print('Baseline MAE:', mean_absolute_error(y_train, y_pred))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Xea7aFidqPoV"
-      },
-      "source": [
-        "# IV. Build Models\n",
-        "\n",
-        "Combine transformers and predictor with `Pipeline`."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "c6gNq-gjvSe9"
-      },
-      "source": [
-        "**Model 1:** Regular ol' linear regression\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "J2Z7IF07ThFl"
+        "id": "BMkDazfUzP_v"
       },
       "source": [
         ""
@@ -248,16 +120,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gMjtQqeVQufl"
+        "id": "Vy-2aFoDXrar"
       },
       "source": [
-        "**Model 2:** Ridge regression (regularization)"
+        "## II. Split Data"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZRs-fAaeQt1e"
+        "id": "ARITmeldXfvP"
       },
       "source": [
         ""
@@ -268,27 +140,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rHhIH6VE0iRH"
+        "id": "7xTafalS_8V1"
       },
       "source": [
-        "# V. Check Metrics"
+        "Since there's no time series component, we should do a randomized train-validation split."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hDj8LEUVOdGs"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BXrqHj_lHPum"
+        "id": "JbtV3_BuX2oL"
       },
       "source": [
         ""
@@ -299,27 +160,18 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "siCJsyz9WeKr"
+        "id": "BQ0X5kSGZtge"
       },
       "source": [
-        "# VI. Tune Model"
+        "## III. Establish our baseline\n",
+        "\n",
+        "- This is a **classification problem**, so we look at the **majority class** to calculate baseline **accuracy score**."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "37cNUoQ2XPhL"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "waEB5-ZBYb_r"
+        "id": "jZnTAwBCvVVA"
       },
       "source": [
         ""
@@ -330,16 +182,62 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uI9K2OXDWThQ"
+        "id": "rhN5A57katzk"
       },
       "source": [
-        "# VII. Communicate results"
+        "## IV. Build Model\n",
+        "\n",
+        "- Why would regular linear regression not work here?"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "84xIPGtUBbsA"
+        "id": "PVvpbpAjMQN8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vEbK3zKW80aN"
+      },
+      "source": [
+        "What we need for our model pipeline:\n",
+        "\n",
+        "- `OneHotEncoder`\n",
+        "- `SimpleImputer`\n",
+        "- `LogisticRegression`"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HWCW8vH18z_s"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ewFaW1p_etFX"
+      },
+      "source": [
+        "## V. Check Metrics"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EhxohqPsesdf"
       },
       "source": [
         ""
@@ -350,7 +248,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RlAyipCNav1H"
+        "id": "y64PC99k1INi"
       },
       "source": [
         ""
