--- a/module1-regression-1/211_guided_project_notes.ipynb
+++ b/module1-regression-1/211_guided_project_notes.ipynb
@@ -18,7 +18,7 @@
         "id": "CPzo2e6aFrjx"
       },
       "source": [
-        "# Lambda School Data Science - Unit 2 Sprint 1 Module 1"
+        "# BloomTech Data Science - Unit 2 Sprint 1 Module 1"
       ]
     },
     {
