--- a/module4-logistic-regression/214_guided_project_notes.ipynb
+++ b/module4-logistic-regression/214_guided_project_notes.ipynb
@@ -19,7 +19,7 @@
         "id": "ff_NZhdHCvfc"
       },
       "source": [
-        "Lambda School Data Science\n",
+        "BloomTech Data Science\n",
         "\n",
         "*Unit 2, Sprint 1, Module 4*\n",
         "\n",
