--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lambda School Data Science\n",
+    "BloomTech Data Science\n",
     "\n",
     "*Unit 2, Sprint 1, Module 3*\n",
     "\n",
