--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lambda School Data Science\n",
+    "BloomTech Data Science\n",
     "\n",
     "*Unit 2, Sprint 1, Module 4*\n",
     "\n",
